--- a/mem.kv
+++ b/mem.kv
@@ -3,7 +3,7 @@
 
 <Character>:
     size: 5, 5
-    
+
     canvas:
         Color:
             rgba: self.color
@@ -24,26 +24,27 @@
     size: 0, 0
 
 <MemGame>:
+    message: message
     chara: character
     select: process_select
     footprints: footprints
-    
+
+    Message:
+        id: message
+        center: self.parent.center
+
+    Character:
+        id: character
+        center: self.parent.center
+
     TranslateHack:
         center: self.parent.center
         pos: self.parent.chara.pos[0] - self.parent.chara.coordinate[0], self.parent.chara.pos[1] - self.parent.chara.coordinate[1]
-    
-    ProcessSelect:
-        id: process_select
-        center: self.parent.center
-    
+
     Footprints:
         id: footprints
         center: self.parent.center
-    
-    TranslateHack:
-        center: self.parent.center
-        pos: self.parent.chara.coordinate[0] - self.parent.chara.pos[0], self.parent.chara.coordinate[1] - self.parent.chara.pos[1]
-    
-    Character:
-        id: character
+
+    ProcessSelect:
+        id: process_select
         center: self.parent.center
