renamed message to message_box.

--- a/mem.kv
+++ b/mem.kv
@@ -24,13 +24,13 @@
     size: 0, 0
 
 <MemGame>:
-    message: message
+    message_box: mbox
     chara: character
     select: process_select
     footprints: footprints
 
-    Message:
-        id: message
+    MessageBox:
+        id: mbox
         center: self.parent.center
 
     Character:
