add get_bytes and update_world

--- a/mem.kv
+++ b/mem.kv
@@ -28,6 +28,7 @@
     chara: character
     select: process_select
     footprints: footprints
+    processview: process_view
 
     MessageBox:
         id: mbox
@@ -47,4 +48,8 @@
 
     ProcessSelect:
         id: process_select
+        center: self.parent.center
+    
+    ProcessView:
+        id: process_view
         center: self.parent.center
