impremented process view

--- a/mem.kv
+++ b/mem.kv
@@ -45,11 +45,14 @@
     Footprints:
         id: footprints
         center: self.parent.center
+        chara: self.parent.chara
 
     ProcessSelect:
         id: process_select
         center: self.parent.center
+        chara: self.parent.chara
     
     ProcessView:
         id: process_view
         center: self.parent.center
+        chara: self.parent.chara
